--- a/XavierLoeraFlores_Project/Purchase.html
+++ b/XavierLoeraFlores_Project/Purchase.html
@@ -54,7 +54,7 @@
 <div class="content">
     <div id="product">
            <h1>Purchase Page</h1>
-    <form method="post" action="mailto:x.loera2@gmail.com" enctype="text/plain" onsubmit="window.alert('Your info has Been Mailed')">
+    <form method="post" action="mailto:randomemailnospamhaha@gmail.com" enctype="text/plain" onsubmit="window.alert('Your info has Been Mailed')">
         <fieldset id="customer_info">
             <legend>Customer Information</legend>
             <ul>
